# nwp-forecast-zarr-creator

./: .gitignore  CHANGELOG.md  DEVELOPING.md  Dockerfile  README.md  build_indexes_and_refs.sh  build_indexes_and_refs_ifs.sh  docker-compose.dev.yml  pyproject.toml  run.sh  script_defaults.sh
.devcontainer/: devcontainer.json
scripts/: create_sample_plot.py  download_harmonie_data.sh
tests/: test_intake_catalog.py
zarr_creator/: __init__.py  __main__.py  config.py  read_source.py  write_zarr.py
zarr_creator/catalog/: catalog.yml
zarr_creator/eccodes_definitions/grib2/localConcepts/ekmi/: shortName.def
