[project]
name = "zarr_creator"
dynamic = ["version"]
description = "zarr creation from harmonie dini forecasts"
authors = [
    {name = "Kasper Stener Hintz", email = "kah@dmi.dk"},
    {name = "Eleni Briola", email = "elb@dmi.dk"},
    {name = "Leif Denby", email = "lcd@dmi.dk"},
]
dependencies = [
    "loguru>=0.7.3",
    "rechunker>=0.5.2",
    "fsspec>=2024.12.0",
    "ipdb>=0.13.13",
    "dask<=2024.11.2",
    "zarrdump>=0.4.2",
    "s3fs>=2025.2.0",
    "cf-xarray>=0.10.0",
    "scipy==1.15.3",
    "isodate>=0.7.2",
    "gribscan",
    "eccodeslib==2.42.0",
    "eccodes==2.42.0",
    "zarr>2.18.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbconvert>=7.16.6",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
intake-catalog = [
    "intake>=2.0.8",
    "intake-xarray>=2.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
zarr_creator = ["eccodes_defitions/**/*", "catalog/*.yml"]

[tool.uv.sources]
gribscan = { git = "https://github.com/simonkamuk/gribscan", rev = "524f829405c576f2266276dc0a2ca669fcad8926" }

[tool.pytest.ini_options]
markers = [
    "integration: tests that require external services or credentials",
]
